@@ -6,6 +6,7 @@ hildon-application-manager (1:2.2.23~unreleased) unstable; urgency=low
   * Make all icons 48x48, centering smaller ones, and (unlikely) scaling larger ones
   * Show catalogue detail (a.k.a refresh error message) at the bottom of the details dialog
   * Make Save/Continue/OK buttons the last ones to be added
+  * Pannables, HildonCheckButton in settings dialog
 
  -- Marius Vollmer <marius.vollmer@nokia.com>  Fri, 04 Jun 2009 21:52:00 +0100	
 
